--- a/backend/src/ml-model-service/notebooks/model_training.ipynb
+++ b/backend/src/ml-model-service/notebooks/model_training.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "165f6053",
+   "id": "aad215d0",
    "metadata": {},
    "source": [
     "#### 2. Parse Dates and sort"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c81e1e71",
+   "id": "3e87838e",
    "metadata": {},
    "source": [
     "#### 3. Cleaning price columns"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e30343",
+   "id": "8b61cb13",
    "metadata": {},
    "source": [
     "#### 4. Removing Invalid rows"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7725291c",
+   "id": "7bd9cc53",
    "metadata": {},
    "source": [
     "#### 7. Cyclical Seasonality Features"
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5affaa1",
+   "id": "1a38a897",
    "metadata": {},
    "source": [
     "#### 8. Lag Features"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce352d02",
+   "id": "d772c4f4",
    "metadata": {},
    "source": [
     "#### 10. Target (7-Day Ahead Forecast)"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7792dae4",
+   "id": "c16fc582",
    "metadata": {},
    "source": [
     "#### 11. Encoding Categorical Variables"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b11c5c1",
+   "id": "44f1e8fe",
    "metadata": {},
    "source": [
     "#### 13. Preparing Training Matrices"
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1726b4c1",
+   "id": "af97f20b",
    "metadata": {},
    "source": [
     "#### 14. Initializing Model"
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67bf8519",
+   "id": "dbfbfafa",
    "metadata": {},
    "source": [
     " #### a) Cross-Validation"
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a85b3a01",
+   "id": "7bd89522",
    "metadata": {},
    "source": [
     " #### a)i) Cross-Validation Summary"
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef42970c",
+   "id": "05281195",
    "metadata": {},
    "source": [
     " #### i) Training Final Model"
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "60231ffd",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training final model on all data...\n"
+      "Training final model on all data...\n",
+      "Final model trained successfully\n"
      ]
     }
    ],
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7860802",
+   "id": "a8ba2926",
    "metadata": {},
    "source": [
     " #### ii) Saving Model Artifacts"
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b9d642a6",
    "metadata": {},
    "outputs": [],
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "id": "30eee3e0",
    "metadata": {},
    "outputs": [
@@ -701,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "2464fd38",
    "metadata": {},
    "outputs": [
@@ -721,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "id": "6f3ab2a7",
    "metadata": {},
    "outputs": [
@@ -729,91 +730,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Metadata saved: ../models/kamis_metadata.json\n"
+      "Encoder saved: ../models/kamis_encoder.pkl\n"
      ]
     }
    ],
    "source": [
-    "metadata = {\n",
-    "    'features': feature_list,\n",
-    "    'model_type': 'RandomForest',\n",
-    "    'n_features': len(feature_list),\n",
-    "    'training_samples': len(X),\n",
-    "    'avg_mae': float(avg_mae),\n",
-    "    'avg_rmse': float(avg_rmse),\n",
-    "    'avg_r2': float(avg_r2),\n",
-    "    'trained_date': datetime.now().isoformat(),\n",
-    "    'sklearn_version': '1.3.2 or higher'\n",
-    "}\n",
-    "\n",
-    "metadata_path = \"../models/kamis_metadata.json\"\n",
-    "with open(metadata_path, 'w') as f:\n",
-    "    json.dump(metadata, f, indent=2)\n",
-    "\n",
-    "print(f\" Metadata saved: {metadata_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "f8a68cb4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recent prices saved: ../data/processed/recent_prices.csv\n",
-      "  Records: 1000\n"
-     ]
-    }
-   ],
-   "source": [
-    "os.makedirs(\"../data/processed\", exist_ok=True)\n",
-    "\n",
-    "recent_data = df[[\n",
-    "    'Date', 'Commodity', 'Market', 'County', 'Retail', 'Wholesale', 'Supply Volume'\n",
-    "]].tail(1000).copy()\n",
-    "\n",
-    "recent_path = \"../data/processed/recent_prices.csv\"\n",
-    "recent_data.to_csv(recent_path, index=False)\n",
-    "print(f\"Recent prices saved: {recent_path}\")\n",
-    "print(f\"  Records: {len(recent_data)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "a4c6a30e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING COMPLETE!\n",
-      "============================================================\n",
-      "\n",
-      "Model Performance:\n",
-      "  MAE:  29.61 KES\n",
-      "  RMSE: 111.59 KES\n",
-      "  R²:   0.6647\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"TRAINING COMPLETE!\")\n",
-    "print(f\"{'='*60}\")\n",
-    "print(f\"\\nModel Performance:\")\n",
-    "print(f\"  MAE:  {avg_mae:.2f} KES\")\n",
-    "print(f\"  RMSE: {avg_rmse:.2f} KES\")\n",
-    "print(f\"  R²:   {avg_r2:.4f}\")"
+    "encoder_path = \"../models/kamis_encoder.pkl\"\n",
+    "joblib.dump(encoder, encoder_path)\n",
+    "print(f\"Encoder saved: {encoder_path}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92fbb6cc",
+   "id": "22981a0f",
    "metadata": {},
    "outputs": [],
    "source": []
