model successfully retrained and corrected

--- a/backend/src/ml-model-service/notebooks/model_training.ipynb
+++ b/backend/src/ml-model-service/notebooks/model_training.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad215d0",
+   "id": "dab15521",
    "metadata": {},
    "source": [
     "#### 2. Parse Dates and sort"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e87838e",
+   "id": "1a76bdcf",
    "metadata": {},
    "source": [
     "#### 3. Cleaning price columns"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b61cb13",
+   "id": "b22a30a7",
    "metadata": {},
    "source": [
     "#### 4. Removing Invalid rows"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd9cc53",
+   "id": "62f931d3",
    "metadata": {},
    "source": [
     "#### 7. Cyclical Seasonality Features"
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a38a897",
+   "id": "c6a03384",
    "metadata": {},
    "source": [
     "#### 8. Lag Features"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d772c4f4",
+   "id": "2cc559c8",
    "metadata": {},
    "source": [
     "#### 10. Target (7-Day Ahead Forecast)"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c16fc582",
+   "id": "f8701135",
    "metadata": {},
    "source": [
     "#### 11. Encoding Categorical Variables"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f1e8fe",
+   "id": "3a1e3927",
    "metadata": {},
    "source": [
     "#### 13. Preparing Training Matrices"
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af97f20b",
+   "id": "5ca8bfe4",
    "metadata": {},
    "source": [
     "#### 14. Initializing Model"
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbfbfafa",
+   "id": "fb84bd12",
    "metadata": {},
    "source": [
     " #### a) Cross-Validation"
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd89522",
+   "id": "2f2bbe1c",
    "metadata": {},
    "source": [
     " #### a)i) Cross-Validation Summary"
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05281195",
+   "id": "d040db33",
    "metadata": {},
    "source": [
     " #### i) Training Final Model"
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8ba2926",
+   "id": "fba34e6f",
    "metadata": {},
    "source": [
     " #### ii) Saving Model Artifacts"
@@ -742,8 +742,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "1265168e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata saved: ../models/kamis_metadata.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "metadata = {\n",
+    "    'features': feature_list, \n",
+    "    'model_type': 'RandomForest',\n",
+    "    'n_features': len(feature_list),\n",
+    "    'training_samples': len(X),\n",
+    "    'avg_mae': float(avg_mae),\n",
+    "    'avg_rmse': float(avg_rmse),\n",
+    "    'avg_r2': float(avg_r2),\n",
+    "    'trained_date': datetime.now().isoformat(),\n",
+    "    'sklearn_version': '1.3.2 or higher'\n",
+    "}\n",
+    "metadata_path = \"../models/kamis_metadata.json\"\n",
+    "with open(metadata_path, 'w') as f:\n",
+    "    json.dump(metadata, f, indent=2)\n",
+    "print(f\"Metadata saved: {metadata_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "22981a0f",
+   "id": "b4797087",
    "metadata": {},
    "outputs": [],
    "source": []
