--- a/backend/src/ml-model-service/notebooks/model_training.ipynb
+++ b/backend/src/ml-model-service/notebooks/model_training.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dab15521",
+   "id": "c4f91376",
    "metadata": {},
    "source": [
     "#### 2. Parse Dates and sort"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a76bdcf",
+   "id": "425dbfed",
    "metadata": {},
    "source": [
     "#### 3. Cleaning price columns"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22a30a7",
+   "id": "4c8d9f0d",
    "metadata": {},
    "source": [
     "#### 4. Removing Invalid rows"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62f931d3",
+   "id": "7f4d4abf",
    "metadata": {},
    "source": [
     "#### 7. Cyclical Seasonality Features"
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a03384",
+   "id": "6d070309",
    "metadata": {},
    "source": [
     "#### 8. Lag Features"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cc559c8",
+   "id": "5bb8586c",
    "metadata": {},
    "source": [
     "#### 10. Target (7-Day Ahead Forecast)"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8701135",
+   "id": "97961592",
    "metadata": {},
    "source": [
     "#### 11. Encoding Categorical Variables"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a1e3927",
+   "id": "535fa63f",
    "metadata": {},
    "source": [
     "#### 13. Preparing Training Matrices"
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ca8bfe4",
+   "id": "4ab0a817",
    "metadata": {},
    "source": [
     "#### 14. Initializing Model"
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb84bd12",
+   "id": "bbe49c44",
    "metadata": {},
    "source": [
     " #### a) Cross-Validation"
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f2bbe1c",
+   "id": "88fa5ab2",
    "metadata": {},
    "source": [
     " #### a)i) Cross-Validation Summary"
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d040db33",
+   "id": "bf322882",
    "metadata": {},
    "source": [
     " #### i) Training Final Model"
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fba34e6f",
+   "id": "120392a9",
    "metadata": {},
    "source": [
     " #### ii) Saving Model Artifacts"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1265168e",
+   "id": "280b4d7c",
    "metadata": {},
    "outputs": [
     {
@@ -774,8 +774,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "5763bf20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving recent prices for API...\n",
+      "Recent prices saved: ../data/processed/recent_prices.csv\n",
+      "  Records: 120473\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Saving recent prices for API...\")\n",
+    "os.makedirs(\"../data/processed\", exist_ok=True)\n",
+    " \n",
+    "recent_data = df.groupby(['Commodity', 'Market', 'County']).tail(30).copy()\n",
+    " \n",
+    "api_columns = ['Date', 'Commodity', 'Market', 'County', 'Retail', 'Wholesale', 'Supply Volume']\n",
+    "recent_data = recent_data[api_columns]\n",
+    "\n",
+    "recent_path = \"../data/processed/recent_prices.csv\"\n",
+    "recent_data.to_csv(recent_path, index=False)\n",
+    "\n",
+    "print(f\"Recent prices saved: {recent_path}\")\n",
+    "print(f\"  Records: {len(recent_data)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b4797087",
+   "id": "bd6b6767",
    "metadata": {},
    "outputs": [],
    "source": []
