scraped new data

--- a/backend/src/ml-model-service/notebooks/model_training.ipynb
+++ b/backend/src/ml-model-service/notebooks/model_training.ipynb
@@ -1472,7 +1472,7 @@
    ],
    "source": [
     "print(\"Saving recent prices...\")\n",
-    "recent_data = df.groupby(['Commodity', 'Market', 'County']).tail(40).copy() # 💡 Keep 40 days for new lags\n",
+    "recent_data = df.groupby(['Commodity', 'Market', 'County']).tail(40).copy() \n",
     "api_columns = ['Date', 'Commodity', 'Market', 'County', 'Retail', 'Wholesale', 'Supply Volume']\n",
     "recent_data = recent_data[api_columns]\n",
     "recent_data.to_csv(\"../data/processed/recent_prices.csv\", index=False)"
