--- a/backend/src/ml-model-service/notebooks/update-model.ipynb
+++ b/backend/src/ml-model-service/notebooks/update-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "7ed2c5f6-2d23-45c2-af0d-ceb9bc28b18c",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "b032036b-941c-4e1b-b92f-db0e6b1f1dd3",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "c3acd432-aa28-4894-a54f-f4d9e72bb4b4",
    "metadata": {},
    "outputs": [],
@@ -63,20 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "213b428a-2393-4c27-9051-a1193d337d16",
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_PATH = os.path.join(BASE_DIR, '../../data/processed/recent_prices.csv')\n",
-    "MODELS_DIR = os.path.join(BASE_DIR, 'models')\n",
+    "MODELS_DIR = os.path.join(BASE_DIR, '../models')\n",
     "os.makedirs(MODELS_DIR, exist_ok=True)\n",
     "os.makedirs(os.path.dirname(DATA_PATH), exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "cd420c5a-4ff5-43fb-9c48-1904d278b800",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "dd3b8252-fedb-4720-aeac-8206fa14320f",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2c05b617-c415-43a1-9d39-50ec69a3e1a4",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,10 @@
       "Loaded 391002 rows from Database.\n",
       "Saved updated dataset to: C:\\Users\\user\\Desktop\\4th year projects\\agri-price tracker\\backend\\src\\ml-model-service\\notebooks\\../../data/processed/recent_prices.csv\n",
       "\n",
-      "Starting Model Training...\n"
+      "Starting Model Training...\n",
+      "Model Accuracy (R2 Score): 0.6406\n",
+      "Saving model artifacts...\n",
+      "Model Updated Successfully!\n"
      ]
     }
    ],
